--- a/src/Layout/Result/Result.scss
+++ b/src/Layout/Result/Result.scss
@@ -5,12 +5,11 @@
 
   .result_header {
     width: 100%;
-    height: 13vh;
-    max-height: 13vh;
+    height: calc(13 * var(--vh));
+    max-height: calc(13 * var(--vh));
     box-sizing: border-box;
 
     .header_left {
-      position: relative;
       background-color: App.$lovely-pink;
 
       .title,
@@ -56,7 +55,6 @@
     }
 
     .header_right {
-      position: relative;
       height: 100%;
       overflow: hidden;
 
@@ -87,8 +85,8 @@
     background-color: App.$lighter-pink;
     box-sizing: border-box;
     padding: 3px;
-    height: 4.5vh;
-    max-height: 4.5vh;
+    height: calc(4.5 * var(--vh));
+    max-height: calc(4.5 * var(--vh));
     box-sizing: border-box;
 
     .characteristic_title {
@@ -108,14 +106,13 @@
   }
 
   .result_body {
-    height: 35vh;
-    max-height: 35vh;
+    height: calc(35 * var(--vh));
+    max-height: calc(35 * var(--vh));
     box-sizing: border-box;
 
     .attractTitleContainer {
       width: 100%;
       height: 100%;
-      position: relative;
       background-color: App.$rose;
 
       .attract_title {
@@ -167,14 +164,13 @@
   }
 
   .result_body2 {
-    height: 43vh;
-    max-height: 43vh;
+    height: calc(43 * var(--vh));
+    max-height: calc(43 * var(--vh));
     box-sizing: border-box;
 
     .attractTitleContainer {
       width: 100%;
       height: 100%;
-      position: relative;
       background-color: App.$lovely-pink;
 
       .attract_title {
@@ -240,8 +236,8 @@
   }
 
   .result_footer {
-    height: 4.5vh;
-    max-height: 4.5vh;
+    height: calc(4.5 * var(--vh));
+    max-height: calc(4.5 * var(--vh));
     box-sizing: border-box;
     min-width: 36px;
     display: flex;
